--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         }
         #box {
             height: 100px;
-            border: 5px solid skyblue;
+            border: 10px solid skyblue;
+            line-height: 100px;
+        }
+        h3 {
+            font-size: 50px;
         }
     </style>
 </head>
