--- a/index.html
+++ b/index.html
@@ -1,28 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background: url(./images/001.jpg) no-repeat;
-            background-size: cover;
-        }
-        #box {
-            height: 100px;
-            border: 10px solid skyblue;
-            line-height: 100px;
-        }
-        h3 {
-            font-size: 50px;
-            color: #ffffff;
-        }
-    </style>
+    <!-- 1. 导包 -->
+    <script src="./echarts.js"></script>
 </head>
+
 <body>
-    <div id="box">
-        <h3>welcome to here</h3>
-    </div>
+    <!-- 2. 创建一个盒子 -->
+    <div id="bar" style="width: 800px; height: 600px; margin : 100px auto"></div>
+
+    <script>
+        /* 3. js初始化*/
+        // 3.1创建一个echarts对象
+        // 基于准备好的DOM，初始化echarts实例
+        var mychart = echarts.init(document.getElementById('bar'));
+
+
+        // 自定义属性
+        var item = {
+            value: 100,
+            itemStyle: {
+                color: '#254065',
+                opacity: 0.5
+            }
+        }
+
+        option = {
+            //条形颜色
+            color: ['#3398DB'],
+
+            //鼠标移入提示
+            tooltip: {
+                trigger: 'axis',
+                axisPointer: {            // 坐标轴指示器，坐标轴触发有效
+                    type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+                },
+                textStyle: {
+                    color: '#f00'
+                }
+            },
+
+            //类似于padding
+            grid: {
+                left: '3%',
+                right: '4%',
+                bottom: '3%',
+                containLabel: true
+            },
+
+            //X轴
+            xAxis: [
+                {
+                    type: 'category',
+                    data: ['上海', '广州', '北京', '深圳', '合肥', '', '......', '', '杭州', '厦门', '济南', '成都', '重庆'],
+                    axisTick: {
+                        alignWithLabel: true,
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    },
+                    axisLine: {
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    }
+
+                }
+            ],
+
+            //Y轴
+            yAxis: [
+                {
+                    type: 'value',
+                    axisTick: {
+                        alignWithLabel: true,
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    },
+                    axisLine: {
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    },
+                    splitLine: {
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    }
+                },
+                {
+                    axisLine: {
+                        lineStyle: {
+                            color: '#83bff6'
+                        }
+                    }
+                }
+            ],
+            series: [
+                {
+                    name: '直接访问',
+                    type: 'bar',
+                    itemStyle: {
+                        color: new echarts.graphic.LinearGradient(
+                            0, 0, 0, 1,
+                            [
+                                { offset: 0, color: '#83bff6' },
+                                { offset: 1, color: '#188df0' }
+                            ]
+                        )
+                    },
+                    barWidth: '60%',
+                    data: [100, 152, 200, 234, 290, item, item, item, 70, 60, 55, 87, 92]
+                }
+            ]
+        };
+        // 3.3 开始加载图表
+        // 使用刚指定的配置项和数据显示图表
+        mychart.setOption(option);
+    </script>
 </body>
+
 </html>
